// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the snapshot changes of fields Should have no violations on the default render for empty props 1`] = `
<fieldset
  onBlur={[Function]}
>
  <label>
    value
  </label>
  <input
    aria-label="value"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
  <select
    aria-label="termType"
    onChange={[Function]}
    value="Literal"
  >
    <option
      value="NamedNode"
    >
      NamedNode
    </option>
    <option
      value="BlankNode"
    >
      BlankNode
    </option>
    <option
      value="Literal"
    >
      Literal
    </option>
  </select>
</fieldset>
`;

exports[`Testing the snapshot changes of fields Should have no violations on the default render for integer literal 1`] = `
<fieldset
  onBlur={[Function]}
>
  <label>
    value
  </label>
  <input
    aria-label="value"
    onBlur={[Function]}
    onChange={[Function]}
    value="0"
  />
  <select
    aria-label="termType"
    onChange={[Function]}
    value="Literal"
  >
    <option
      value="NamedNode"
    >
      NamedNode
    </option>
    <option
      value="BlankNode"
    >
      BlankNode
    </option>
    <option
      value="Literal"
    >
      Literal
    </option>
  </select>
  <label>
    datatype
  </label>
  <input
    aria-label="datatype"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://www.w3.org/2001/XMLSchema#integer"
  />
</fieldset>
`;

exports[`Testing the snapshot changes of fields Should have no violations on the default render for literal 1`] = `
<fieldset
  onBlur={[Function]}
>
  <input
    aria-label="value"
    onChange={[Function]}
    type="text"
    value="Jesse"
  />
  <select
    aria-label="termType"
    onChange={[Function]}
    value="Literal"
  >
    <option
      value="NamedNode"
    >
      NamedNode
    </option>
    <option
      value="BlankNode"
    >
      BlankNode
    </option>
    <option
      value="Literal"
    >
      Literal
    </option>
  </select>
  <label>
    datatype
  </label>
  <input
    aria-label="datatype"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://www.w3.org/2001/XMLSchema#string"
  />
</fieldset>
`;

exports[`Testing the snapshot changes of fields Should have no violations on the default render for namedNode props + label 1`] = `
<fieldset
  onBlur={[Function]}
>
  <label>
    value
  </label>
  <input
    aria-label="value"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://example.org#Jesse"
  />
  <select
    aria-label="termType"
    onChange={[Function]}
    value="NamedNode"
  >
    <option
      value="NamedNode"
    >
      NamedNode
    </option>
    <option
      value="BlankNode"
    >
      BlankNode
    </option>
    <option
      value="Literal"
    >
      Literal
    </option>
  </select>
  <label>
    type
  </label>
  <input
    aria-label="type"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
  <label>
    label
  </label>
  <input
    aria-label="label"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
</fieldset>
`;

exports[`Testing the snapshot changes of fields Should have no violations on the default render for namedNode props 1`] = `
<fieldset
  onBlur={[Function]}
>
  <label>
    value
  </label>
  <input
    aria-label="value"
    onBlur={[Function]}
    onChange={[Function]}
    value="http://example.org#Jesse"
  />
  <select
    aria-label="termType"
    onChange={[Function]}
    value="NamedNode"
  >
    <option
      value="NamedNode"
    >
      NamedNode
    </option>
    <option
      value="BlankNode"
    >
      BlankNode
    </option>
    <option
      value="Literal"
    >
      Literal
    </option>
  </select>
  <label>
    type
  </label>
  <input
    aria-label="type"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
  <label>
    label
  </label>
  <input
    aria-label="label"
    onBlur={[Function]}
    onChange={[Function]}
    value=""
  />
</fieldset>
`;
